# gf180mcu

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  conftest.py  install_tech.py  mkdocs-pdf.yml  pyproject.toml  zensical.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  deploy-s3.yml  model_coverage.yml  pages.yml  release-drafter.yml  release.yml  test_code.yml  test_coverage.yml  update_badges.yml
docs/: _config.yml  _toc.yml  cells.rst  migration.md  write_cells.py  zensical.toml
docs/_ext/: activate_pdk.py
docs/_static/: redirect.js
docs/notebooks/: intro.py
gf180mcu/: __init__.py  cap_mim.py  cap_mos.py  diode.py  fet.py  guardring.py  layers.py  res.py  tech.py
gf180mcu--sample-projects/gf180mcu--public--pdk/: CHANGELOG.md  README.md  install_tech.py  pyproject.toml
gf180mcu/cells/: __init__.py  cap_mim.py  cap_mom.py  cap_mos.py  diode.py  fet.py  guardring.py  res.py  via_generator.py  waveguides.py
gf180mcu/fixed/: __init__.py
gf180mcu/klayout/: grain.xml
gf180mcu/logic/: __init__.py
gf180mcu/models/: to_vlsir.py
gf180mcu/samples/: sample_to_3d.py  sample_to_3d_electrical.py
klayout/pymacros/: README.md
notebooks/: intro.ipynb
scripts/magic/: Dockerfile  generate_references.sh  gf180mcu_generators.tcl  sweep_params.json
tests/: conftest.py  test_components.py  test_xor.py
tests/gds_ref/: alter_interdig_alter_interdig_SDFrectangle_Mgdsfactoryp_2de7c262.gds  bend_bend_RNone_A90_WNone_CSmetal1.gds  bend_s_S11_1p8_CSmetal1_WNone.gds  bend_s_bend_s_S11_1p8_CSmetal1_WNone.gds  bend_s_bend_s_S11_1p8_C_f2e9541b.gds  cap_mim_MOA_MLM4_L2_W2_LFalse_TL_BL.gds  cap_mim_MOMIMmA_MLM4_L2_W2_LFalse_TL_BL.gds  cap_mim_cap_mim_MOA_MLM4_L2_W2_LFalse_TL_BL.gds  cap_mom_NF4_FL4_FS0p28_BMmetal1_TMmetal3.gds  cap_mos_Tcap_nmos_L0p1_W0p1_V3p3V_DFalse_PFalse_LFalse_GL_SL.gds  cap_mos_inst_cap_mos_inst_L0p1_W0p1_CW0p1_CW0p1_PL0p1_C_495aa1e8.gds  diode_dw2ps_L0p1_W0p1_C0p1_V3p3V_PFalse_LFalse_PL_NL.gds  diode_nd2ps_L0p1_W0p1_C0p1_V3p3V_DFalse_PFalse_LFalse_PL_NL.gds  diode_nd2ps_L0p45_W0p45_V3p3V_DFalse_PFalse_LFalse_PL_NL.gds  diode_pd2nw_L0p1_W0p1_C0p1_V3p3V_DFalse_PFalse_LFalse_PL_NL.gds  diode_pd2nw_L0p45_W0p45_V3p3V_DFalse_PFalse_LFalse_PL_NL.gds  diode_pd2nw_diode_pd2nw_L0p1_W0p1_C0p1_V3p3V_DFalse_PFa_572d3fb7.gds  efuse.gds  gf180mcu_fd_sc_mcu7t5v0__addf_1.gds  gf180mcu_fd_sc_mcu7t5v0__addf_2.gds  gf180mcu_fd_sc_mcu7t5v0__addf_4.gds  gf180mcu_fd_sc_mcu7t5v0__addh_1.gds  gf180mcu_fd_sc_mcu7t5v0__addh_2.gds  gf180mcu_fd_sc_mcu7t5v0__and2_1.gds  gf180mcu_fd_sc_mcu7t5v0__and2_2.gds  gf180mcu_fd_sc_mcu7t5v0__and2_4.gds  gf180mcu_fd_sc_mcu7t5v0__and3_1.gds  gf180mcu_fd_sc_mcu7t5v0__and3_2.gds  gf180mcu_fd_sc_mcu7t5v0__and3_4.gds  gf180mcu_fd_sc_mcu7t5v0__and4_1.gds  gf180mcu_fd_sc_mcu7t5v0__and4_2.gds  gf180mcu_fd_sc_mcu7t5v0__and4_4.gds  gf180mcu_fd_sc_mcu7t5v0__antenna.gds  gf180mcu_fd_sc_mcu7t5v0__aoi211_1.gds  gf180mcu_fd_sc_mcu7t5v0__aoi211_2.gds  gf180mcu_fd_sc_mcu7t5v0__aoi211_4.gds  gf180mcu_fd_sc_mcu7t5v0__aoi21_1.gds  gf180mcu_fd_sc_mcu7t5v0__aoi21_2.gds  gf180mcu_fd_sc_mcu7t5v0__aoi21_4.gds  gf180mcu_fd_sc_mcu7t5v0__aoi221_1.gds  (+420 more)
tests/gds_run/: alter_interdig_SDFrectangle_Mgdsfactorypcomponentspshap_91096da8.gds  array_gdsfactorypcomponentspcontainersparray_component__857c0b00.gds  bend_RNone_A90_WNone_CSmetal1.gds  bend_s_S11_1p8_CSmetal1_WNone.gds  cap_mim_MOA_MLM4_L2_W2_LFalse_TL_BL.gds  cap_mim_MOA_MLM4_L5_W5_LFalse_TL_BL.gds  cap_mos_Tcap_nmos_L0p1_W0p1_V3p3V_DFalse_PFalse_LFalse_GL_SL.gds  cap_mos_Tcap_nmos_L0p1_W0p1_V3p3V_DFalse_PFalse_LFalse_GL_SL.oas  cap_mos_inst_L0p1_W0p1_CW0p1_CW0p1_PL0p1_CE0p1_PE0p1_IL_e5fafbfa.gds  diode_dw2ps_L0p1_W0p1_C0p1_V3p3V_PFalse_LFalse_PL_NL.gds  diode_nd2ps_L0p1_W0p1_C0p1_V3p3V_DFalse_PFalse_LFalse_PL_NL.gds  diode_nd2ps_L0p45_W0p45_V3p3V_DFalse_PFalse_LFalse_PL_NL.gds  diode_nw2ps_L0p1_W0p1_C0p1_V3p3V_LFalse_PL_NL.gds  diode_pd2nw_L0p1_W0p1_C0p1_V3p3V_DFalse_PFalse_LFalse_PL_NL.gds  diode_pd2nw_L0p45_W0p45_V3p3V_DFalse_PFalse_LFalse_PL_NL.gds  diode_pw2dw_L0p1_W0p1_C0p1_V3p3V_PFalse_LFalse_PL_NL.gds  efuse.gds  gf180mcu_fd_sc_mcu7t5v0__addf_1.gds  gf180mcu_fd_sc_mcu7t5v0__addf_2.gds  gf180mcu_fd_sc_mcu7t5v0__addf_4.gds  gf180mcu_fd_sc_mcu7t5v0__addh_1.gds  gf180mcu_fd_sc_mcu7t5v0__addh_2.gds  gf180mcu_fd_sc_mcu7t5v0__addh_4.gds  gf180mcu_fd_sc_mcu7t5v0__and2_1.gds  gf180mcu_fd_sc_mcu7t5v0__and2_2.gds  gf180mcu_fd_sc_mcu7t5v0__and2_4.gds  gf180mcu_fd_sc_mcu7t5v0__and3_1.gds  gf180mcu_fd_sc_mcu7t5v0__and3_2.gds  gf180mcu_fd_sc_mcu7t5v0__and3_4.gds  gf180mcu_fd_sc_mcu7t5v0__and4_1.gds  gf180mcu_fd_sc_mcu7t5v0__and4_2.gds  gf180mcu_fd_sc_mcu7t5v0__and4_4.gds  gf180mcu_fd_sc_mcu7t5v0__and4_4.oas  gf180mcu_fd_sc_mcu7t5v0__antenna.gds  gf180mcu_fd_sc_mcu7t5v0__antenna.oas  gf180mcu_fd_sc_mcu7t5v0__aoi211_1.gds  gf180mcu_fd_sc_mcu7t5v0__aoi211_1.oas  gf180mcu_fd_sc_mcu7t5v0__aoi211_2.gds  gf180mcu_fd_sc_mcu7t5v0__aoi211_4.gds  gf180mcu_fd_sc_mcu7t5v0__aoi211_4.oas  (+606 more)
tests/test_components/: test_pdk_settings_alter_interdig_.yml  test_pdk_settings_bend_.yml  test_pdk_settings_bend_s_.yml  test_pdk_settings_cap_mim_.yml  test_pdk_settings_cap_mom_.yml  test_pdk_settings_cap_mos_.yml  test_pdk_settings_cap_mos_inst_.yml  test_pdk_settings_diode_dw2ps_.yml  test_pdk_settings_diode_nd2ps_.yml  test_pdk_settings_diode_nw2ps_.yml  test_pdk_settings_diode_pd2nw_.yml  test_pdk_settings_diode_pw2dw_.yml  test_pdk_settings_dn_rect_.yml  test_pdk_settings_efuse_.yml  test_pdk_settings_gf180mcu_fd_sc_mcu7t5v0__addf_1_.yml  test_pdk_settings_gf180mcu_fd_sc_mcu7t5v0__addf_2_.yml  test_pdk_settings_gf180mcu_fd_sc_mcu7t5v0__addf_4_.yml  test_pdk_settings_gf180mcu_fd_sc_mcu7t5v0__addh_1_.yml  test_pdk_settings_gf180mcu_fd_sc_mcu7t5v0__addh_2_.yml  test_pdk_settings_gf180mcu_fd_sc_mcu7t5v0__addh_4_.yml  test_pdk_settings_gf180mcu_fd_sc_mcu7t5v0__and2_1_.yml  test_pdk_settings_gf180mcu_fd_sc_mcu7t5v0__and2_2_.yml  test_pdk_settings_gf180mcu_fd_sc_mcu7t5v0__and2_4_.yml  test_pdk_settings_gf180mcu_fd_sc_mcu7t5v0__and3_1_.yml  (+483 more)
(+351 files in other folders)
