# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "gdsfactory", email = "contact@gdsfactory.com"}]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent"
]
dependencies = [
  "gdsfactory~=9.20.7"
]
description = "GlobalFoundries 180nm MCU"
keywords = ["python"]
license = {file = "LICENSE"}
name = "gf180mcu"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "0.4.0"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest_regressions",
  "pytest-github-actions-annotate-failures",
  "towncrier"
]
docs = ["autodoc_pydantic", "jupytext", "jupyter-book>=0.15.1,<2.2"]
tests = ["pytest", "pytest-cov"]

[tool.gdsfactoryplus.pdk]
name = "gf180mcu"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pytest.ini_options]
# addopts = --tb=no
addopts = '--tb=short'
norecursedirs = ["extra/*.py", 'gf180/cells/klayout/*.py']
python_files = ["gf180/*.py", "notebooks/*.ipynb", "tests/*.py"]
testpaths = ["tests"]

[tool.ruff]
fix = true
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408",  # C408 Unnecessary `dict` call (rewrite as a literal)
  'B006'
]
select = [
  "B",  # flake8-bugbear
  "C",  # flake8-comprehensions
  # "D",  # pydocstyle
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "T10",  # flake8-debugger
  "UP",  # pyupgrade
  "W",  # pycodestyle warnings
  "PERF",  # performance improvements
  "RUF"  # ruff
]

[tool.ruff.lint.per-file-ignores]
"gf180mcu/cells/__init__.py" = ["F403"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.yaml", "*.yml", "*.gds", "*.lyp", "*.oas", "*.lyt", "*.dat", "*.nc", "*.svg", '*.GDS', "*.json", "*.txt"]

[tool.setuptools.packages]
find = {}

[tool.tbump]

[[tool.tbump.before_commit]]
cmd = "towncrier build --yes --version {new_version}"
name = "create & check changelog"

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "gf180mcu/__init__.py"

[[tool.tbump.file]]
src = "gf180mcu/klayout/grain.xml"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "0.4.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.towncrier]
directory = ".changelog.d"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/gdsfactory/gf180mcu/issues/{issue})"
package = "gdsfactory"
start_string = "<!-- towncrier release notes start -->\n"
template = ".changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/gdsfactory/gf180mcu/releases/tag/v{version}) - {project_date}"
underlines = ["", "", ""]
